reportes y generar recibo %

--- a/GastroByte/Views/Shared/_Layout.cshtml
+++ b/GastroByte/Views/Shared/_Layout.cshtml
@@ -62,7 +62,7 @@
                             </ul>
                         </li>
                         <li class="list-inline-item"><a href="@Url.Action("Contact", "Home")">Contacto</a></li>
-                        <li class="list-inline-item btn-cta"><a href="#"><span>Reservación</span></a></li>
+                        <li class="list-inline-item btn-cta"><a href="@Url.Action("Login", "Usuario")"><span>Iniciar Sesion</span></a></li>
                     </ul>
                 </div>
             </div>
