--- a/GastroByte/Views/Shared/_Layout_admin.cshtml
+++ b/GastroByte/Views/Shared/_Layout_admin.cshtml
@@ -55,6 +55,9 @@
                         <li class="list-inline-item btn-cta"><a href="@Url.Action("IndexReservas", "Administrador")"><span>Gestion de Reservas</span></a></li>
                         <li class="list-inline-item btn-cta"><a href="@Url.Action("IndexMenu", "Administrador")"><span>Gestion de Menus</span></a></li>
                         <li class="list-inline-item btn-cta"><a href="#"><span>Gestion de mesas</span></a></li>
+                        <li class="list-inline-item btn-cta">
+                            <a href="@Url.Action("Logout", "Usuario")"><span>Cerrar Sesión</span></a>
+                        </li>
                     </ul>
                 </div>
             </div>
