--- a/GastroByte/Content/css/style.css
+++ b/GastroByte/Content/css/style.css
@@ -1522,6 +1522,26 @@ form label {
   opacity: 1;
 }
 
+.login-container {
+    max-width: 500px;
+    margin: 50px auto;
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    background-color: #f8f8f8;
+}
+
+h4 {
+    text-align: center;
+    color: #333;
+    font-weight: bold;
+}
+.form-horizontal {
+    display: flex;
+    flex-direction: column;
+}
+
 .form-control-1 {
     box-shadow: none;
     background: transparent;
