--- a/GastroByte/Views/Home/Index.cshtml
+++ b/GastroByte/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model GastroByte.Dtos.ReservaDto
 @{
-    Layout = "~/Views/Shared/_Layout.cshtml"; 
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <!DOCTYPE HTML>
@@ -23,6 +23,9 @@
                                 <span class="intro-text-small">SOFTWARE 2024 </span>
                                 <h1 class="cursive-font">¡Todo en buen gusto!</h1>
                             </div>
+
+                            
+
                             <div class="col-md-4 col-md-push-1 animate-box" data-animate-effect="fadeInRight">
                                 <div class="form-wrap">
                                     <div class="tab">
@@ -41,10 +44,12 @@
                                                         @Html.ValidationMessageFor(model => model.numero_personas, "", new { @class = "text-danger" })
                                                     </div>
 
+
+
                                                     <div class="form-group">
-                                                        @Html.Label("Mesa:")
-                                                        @Html.EditorFor(model => model.mesa, new { htmlAttributes = new { @class = "form-control" } })
-                                                        @Html.ValidationMessageFor(model => model.mesa, "", new { @class = "text-danger" })
+                                                        @Html.Label("N.Documento:")
+                                                        @Html.EditorFor(model => model.documento, new { htmlAttributes = new { @class = "form-control" } })
+                                                        @Html.ValidationMessageFor(model => model.documento, "", new { @class = "text-danger" })
                                                     </div>
 
                                                     <div class="form-group">
@@ -60,13 +65,15 @@
                                                     </div>
 
                                                     <div class="form-group">
-                                                        <label for="date">Fecha</label>
-                                                        <input type="date" id="date" class="form-control">
+                                                        @Html.Label("Fecha:")
+                                                        @Html.EditorFor(model => model.fecha, new { htmlAttributes = new { @class = "form-control", @type = "date" } })
+                                                        @Html.ValidationMessageFor(model => model.fecha, "", new { @class = "text-danger" })
                                                     </div>
 
                                                     <div class="form-group">
-                                                        <label for="time">Hora</label>
-                                                        <input type="time" id="time" class="form-control">
+                                                        @Html.Label("Hora:")
+                                                        @Html.EditorFor(model => model.hora, new { htmlAttributes = new { @class = "form-control", @type = "time" } })
+                                                        @Html.ValidationMessageFor(model => model.hora, "", new { @class = "text-danger" })
                                                     </div>
 
                                                     <div class="row form-group">
@@ -163,5 +170,6 @@
             </div>
         </div>
     </div>
+
 </body>
 </html>
