--- a/GastroByte/Views/Usuario/Login.cshtml
+++ b/GastroByte/Views/Usuario/Login.cshtml
@@ -4,31 +4,32 @@
 {
     @Html.AntiForgeryToken()
 
-    <div class="form-horizontal">
+    <div class="login-container">
         <h4>Iniciar Sesión</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.numero_documento, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.numero_documento, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.numero_documento, "", new { @class = "text-danger" })
-            </div>
+    <div class="form-group row">
+        @Html.Label("Nº de documento:", htmlAttributes: new { @class = "control-label col-md-4" })
+        <div class="col-sm-8">
+            @Html.EditorFor(model => model.numero_documento, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.numero_documento, "", new { @class = "text-danger" })
         </div>
+    </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.contrasena, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.PasswordFor(model => model.contrasena, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.contrasena, "", new { @class = "text-danger" })
-            </div>
+    <div class="form-group row">
+        @Html.Label("Contraseña:", htmlAttributes: new { @class = "control-label col-md-4" })
+        <div class="col-sm-8">
+            @Html.EditorFor(model => model.contrasena, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.contrasena, "", new { @class = "text-danger" })
         </div>
+    </div>
 
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Iniciar Sesión" class="btn btn-default" />
+        <div class="form-group row">
+            <div class="col-sm-12 text-center">
+                <input type="submit" value="Iniciar Sesión" class="btn btn-primary" />
             </div>
         </div>
     </div>
 }
+
