--- a/GastroByte/Views/Home/Contact.cshtml
+++ b/GastroByte/Views/Home/Contact.cshtml
@@ -1,17 +1,17 @@
 ﻿@{
-    ViewBag.Title = "Contact";
+    ViewBag.Title = "Contactenos";
 }
 <h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+<h3></h3>
 
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
+    Facatativá, Cundinamarca<br />
+    Trans 15<br />
+    <abbr title="Phone">Telefono:</abbr>
+    322 4080792
 </address>
 
 <address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <strong>Support:</strong>   <a> gastrobytesoftware@gmail.com</a><br />
+    <strong>Marketing:</strong> <a> jdcano2005@outlook.com</a>
 </address>
