--- a/GastroByte/Views/Asistente/EditMenu.cshtml
+++ b/GastroByte/Views/Asistente/EditMenu.cshtml
@@ -2,12 +2,12 @@
 
 @{
     ViewBag.Title = "Editar Menu";
-    Layout = "~/Views/Shared/_Layout_admin.cshtml";
+    Layout = "~/Views/Shared/_Layout_asistente.cshtml";
 }
 
 <h2>Editar Menu</h2>
 
-@using (Html.BeginForm("EditMenu", "Administrador", FormMethod.Post))
+@using (Html.BeginForm("EditMenu", "Asistente", FormMethod.Post))
 {
     @Html.AntiForgeryToken() <!-- Aquí agregamos el token de verificación -->
 
@@ -32,5 +32,5 @@
     </div>
 
     <button type="submit" class="btn btn-primary">Guardar Cambios</button>
-    <a href="@Url.Action("IndexMenu", "Administrador")" class="btn btn-secondary">Cancelar</a>
+    <a href="@Url.Action("IndexMenu", "Asistente")" class="btn btn-secondary">Cancelar</a>
 }
