--- a/GastroByte/Views/Home/Index.cshtml
+++ b/GastroByte/Views/Home/Index.cshtml
@@ -48,15 +48,33 @@
 
                                                     <div class="form-group">
                                                         @Html.Label("N.Documento:")
-                                                        @Html.EditorFor(model => model.documento, new { htmlAttributes = new { @class = "form-control" } })
+                                                        @Html.EditorFor(model => model.documento, new
+                                                        {
+                                                            htmlAttributes = new
+                                                            {
+                                                                @class = "form-control",
+                                                                @pattern = "^[0-9]+$",
+                                                                @title = "Solo se permiten números"
+                                                            }
+                                                        })
                                                         @Html.ValidationMessageFor(model => model.documento, "", new { @class = "text-danger" })
                                                     </div>
 
+
                                                     <div class="form-group">
                                                         @Html.Label("Nombre:")
-                                                        @Html.EditorFor(model => model.nombre, new { htmlAttributes = new { @class = "form-control" } })
+                                                        @Html.EditorFor(model => model.nombre, new
+                                                        {
+                                                            htmlAttributes = new
+                                                            {
+                                                                @class = "form-control",
+                                                                @pattern = "^[a-zA-Z\\s]+$",
+                                                                @title = "Solo se permiten letras"
+                                                            }
+                                                        })
                                                         @Html.ValidationMessageFor(model => model.nombre, "", new { @class = "text-danger" })
                                                     </div>
+
 
                                                     <div class="form-group">
                                                         @Html.Label("Gmail:")
