--- a/GastroByte/Views/Cliente/ConfirmarPago.cshtml
+++ b/GastroByte/Views/Cliente/ConfirmarPago.cshtml
@@ -46,7 +46,7 @@
     </table>
 
     <!-- Formulario para los datos del cliente -->
-    @using (Html.BeginForm("ProcesarPago", "Administrador", FormMethod.Post))
+    @using (Html.BeginForm("ProcesarPago", "Cliente", FormMethod.Post))
     {
         @Html.AntiForgeryToken()
 
