--- a/GastroByte/Views/Cliente/IndexCarrito.cshtml
+++ b/GastroByte/Views/Cliente/IndexCarrito.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<GastroByte.Dtos.MenuDto>
 @{
     ViewBag.Title = "Carrito de Compras";
-    Layout = "~/Views/Shared/_Layout_admin.cshtml";
+    Layout = "~/Views/Shared/_Layout_cliente.cshtml";
 }
 
 <h2>Carrito de Compras</h2>
@@ -53,27 +53,17 @@
 
 <div class="total-container">
     <h4>Total: $@Model.Sum(item => item.precio * item.cantidad)</h4>
-    <a href="@Url.Action("ConfirmarPago", "Administrador")"
+    <a href="@Url.Action("ConfirmarPago", "Cliente")"
        class="btn btn-primary btn-lg btn-block"
-       onclick="return verificarUsuarioLogueado()">Pagar</a>
+      >Pagar</a>
 </div>
 
-<script>
-    function verificarUsuarioLogueado() {
-        var usuarioLogueado = '@Session["UserID"]' !== ''; // Verifica si la sesión existe
-        if (!usuarioLogueado) {
-            alert("Debes iniciar sesión para realizar el pago.");
-            window.location.href = '@Url.Action("Login", "Usuario", new { returnUrl = Url.Action("ConfirmarPago", "Administrador") })';
-            return false;
-        }
-        return true;
-    }
-</script>
+
 
 <script>
     function quitarDelCarrito(id) {
         $.ajax({
-            url: '@Url.Action("QuitarDelCarrito", "Administrador")',
+            url: '@Url.Action("QuitarDelCarrito", "Cliente")',
             type: 'POST',
             data: JSON.stringify({ id_platillo: id }),
             contentType: 'application/json; charset=utf-8',
