--- a/GastroByte/Views/Shared/_Layout_asistente.cshtml
+++ b/GastroByte/Views/Shared/_Layout_asistente.cshtml
@@ -53,7 +53,7 @@
                     <ul class="list-inline">
                         <!-- Cambiar a list-inline para que los elementos estén en la misma línea -->
                         <li class="list-inline-item btn-cta"><a href="@Url.Action("IndexReservas", "Asistente")"><span>Gestion de Reservas</span></a></li>
-                        <li class="list-inline-item btn-cta"><a href="@Url.Action("IndexMenu", "Asistente")"><span>Gestion de Menus</span></a></li>
+                        <li class="list-inline-item btn-cta"><a href="@Url.Action("IndexMenu", "Cliente")"><span> Pedidos</span></a></li>
                         <li class="list-inline-item btn-cta"><a href="@Url.Action("Logout", "Usuario")"><span>Cerrar Sesión</span></a></li>
 
 
