--- a/GastroByte/Views/Cliente/ConfirmarPago.cshtml
+++ b/GastroByte/Views/Cliente/ConfirmarPago.cshtml
@@ -1,5 +1,9 @@
 ﻿@model GastroByte.Dtos.PedidoDto
 
+@{
+    ViewBag.Title = "Confirmación de Pago";
+    Layout = "~/Views/Shared/_Layout_cliente.cshtml";
+}
 <div class="container">
     <h2>Confirmación de Pago</h2>
     <p>Revisa tu pedido antes de continuar con el pago.</p>
