--- a/GastroByte/Views/Shared/_Layout_cliente.cshtml
+++ b/GastroByte/Views/Shared/_Layout_cliente.cshtml
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - Mi aplicación ASP.NET</title>
 
+    
+
     link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
 
@@ -52,8 +54,8 @@
                 <div class="col-md-8 text-right menu-1">
                     <ul class="list-inline">
                         <!-- Cambiar a list-inline para que los elementos estén en la misma línea -->
-                        <li class="list-inline-item btn-cta"><a href="@Url.Action("IndexReservas", "Asistente")"><span>Gestion de Reservas</span></a></li>
-                        <li class="list-inline-item btn-cta"><a href="@Url.Action("IndexMenu", "Asistente")"><span>Gestion de Menus</span></a></li>
+                        <li class="list-inline-item btn-cta"><a href="@Url.Action("CreateReserva", "Cliente")"><span>Crear reserva</span></a></li>
+                        <li class="list-inline-item btn-cta"><a href="@Url.Action("IndexMenu", "Cliente")"><span> Pedidos</span></a></li>
                         <li class="list-inline-item btn-cta"><a href="@Url.Action("Logout", "Usuario")"><span>Cerrar Sesión</span></a></li>
 
 
