--- a/GastroByte/Views/Cliente/IndexCarrito.cshtml
+++ b/GastroByte/Views/Cliente/IndexCarrito.cshtml
@@ -5,7 +5,7 @@
 }
 
 <h2>Carrito de Compras</h2>
-
+<a href="@Url.Action("IndexMenu", "Cliente")" class="btn btn-secondary">Volver al menu</a>
 @if (TempData["SuccessMessage"] != null)
 {
     <div class="alert alert-success">
