--- a/GastroByte/Views/Home/Index.cshtml
+++ b/GastroByte/Views/Home/Index.cshtml
@@ -238,8 +238,8 @@
             <div class="gtco-container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2 text-center gtco-heading animate-box">
-                        <h2 class="cursive-font">Contador</h2>
-                        <p>Texto Ejemplo.</p>
+                        <h2 class="cursive-font">"Transforma tu experiencia gastronómica con la comodidad de Gastro Byte. ¡Reserva, disfruta y repite!"</h2>
+                        
                     </div>
                 </div>
                 <!-- Continúa con el resto del contenido aquí -->
