--- a/GastroByte/Views/Shared/_Layout.cshtml
+++ b/GastroByte/Views/Shared/_Layout.cshtml
@@ -51,17 +51,10 @@
                 </div>
                 <div class="col-md-8 text-right menu-1">
                     <ul class="list-inline">
-                        <!-- Cambiar a list-inline para que los elementos estén en la misma línea -->
-                        <li class="list-inline-item"><a href="@Url.Action("Menu", "Home")">Menú</a></li>
-                        <li class="list-inline-item has-dropdown">
-                            <a href="@Url.Action("Services", "Home")">Servicios</a>
-                            <ul class="dropdown">
-                                <li><a href="#">Catering de Alimentos</a></li>
-                                <li><a href="#">Celebración de Bodas</a></li>
-                                <li><a href="#">Celebración de Cumpleaños</a></li>
-                            </ul>
-                        </li>
+                        
+
                         <li class="list-inline-item"><a href="@Url.Action("Contact", "Home")">Contacto</a></li>
+                        <li class="list-inline-item"><a href="@Url.Action("Create", "Usuario")">Registar aqui</a></li>
                         <li class="list-inline-item btn-cta"><a href="@Url.Action("Login", "Usuario")"><span>Iniciar Sesion</span></a></li>
                     </ul>
                 </div>
