--- a/GastroByte/Views/Cliente/Index.cshtml
+++ b/GastroByte/Views/Cliente/Index.cshtml
@@ -8,7 +8,7 @@
 <br />
 
 <h4>Bienvenido, estimado @ViewBag.UserName</h4>
-<h4>Rol: @userRole</h4>
+<h4>@userRole</h4>
 @{
     if (TempData["SuccessMessage"] != null)
     {
