--- a/GastroByte/Views/Shared/_Layout_cliente.cshtml
+++ b/GastroByte/Views/Shared/_Layout_cliente.cshtml
@@ -41,6 +41,7 @@
     <![endif]-->
 </head>
 <body class="body-content">
+    <script src="@Url.Content("~/Content/js/carrito.js")"></script>
     <!-- Nueva barra de navegación -->
     <nav class="gtco-nav" role="navigation" style="background-color: #1b1b1b;">
         <div class="gtco-container">
@@ -100,6 +101,7 @@
 
     <!-- Main -->
     <script src="@Url.Content("~/Content/js/main.js")"></script>
+
 </body>
 </html>
 
